--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,3 +1,5 @@
+@import '~antd/dist/antd.css';
+
 html,
 body {
   padding: 0;
@@ -19,8 +21,13 @@ a {
   html {
     color-scheme: dark;
   }
-  body {
+  /* body {
     color: white;
     background: black;
-  }
+  } */
+}
+
+
+.container {
+  margin: auto;
 }
